Implement mangled name parser